--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<li>Jello <button> delete</button></li>
 			<li>Spinach<button>delete </button></li>
 			<li>Rice<button>delete </button></li>
-			<li>Birthday Cake<button>delete </button></li>
+			<li>Shopping<button>delete </button></li>
 			<li>Candles<button >delete</button></li>
 		</ul>
 	<script type="text/javascript" src="script.js"></script>
